<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.eclipse.paho</groupId>
    <artifactId>java-parent</artifactId>
    <version>1.2.1-SNAPSHOT</version>
  </parent>
  <artifactId>org.eclipse.paho.mqttv5.client</artifactId>
  <dependencies>
  	<dependency>
  		<groupId>org.eclipse.paho</groupId>
  		<artifactId>org.eclipse.paho.mqttv5.common</artifactId>
  		<version>1.2.1-SNAPSHOT</version>
  	</dependency>
  	<dependency>
  		<groupId>io.vertx</groupId>
  		<artifactId>vertx-core</artifactId>
  		<version>3.6.0</version>
  	</dependency>
  	<dependency>
  		<groupId>junit</groupId>
  		<artifactId>junit</artifactId>
  		<version>${junit.version}</version>
  	</dependency>
	  <dependency>
		  <groupId>org.eclipse.paho</groupId>
		  <artifactId>org.eclipse.paho.common</artifactId>
		  <version>1.2.1-SNAPSHOT</version>
		  <scope>test</scope>
		  <type>test-jar</type>
	  </dependency>
  </dependencies>
  
 	<build>
		<plugins>
			<plugin>
 				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${jacoco.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
          		<id>generate-test-report</id>
        			<phase>test</phase>
        			<goals>
            		<goal>report-aggregate</goal>
        			</goals>
      			</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>${javadoc.version}</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>javadoc-no-fork</goal>
							<goal>jar</goal>
						</goals>
						<configuration>
							<additionalparam>${javadoc.opts}</additionalparam>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>${mvnsource.version}</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
